src/objects/Connect_Dashboard__mdt.object
<CustomObject>
    <description>Custom Metadata to hold Dashboards values</description>
    <fields>
        <fullName>Dataset__c</fullName>
        <description>Holds the DataSet Value for Dashboard</description>
        <inlineHelpText>Dashboards DataSet Value</inlineHelpText>
        <label>Dataset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <description>Holds the Group ID for Dashboards</description>
        <inlineHelpText>Dashboard&apos;s Group ID</inlineHelpText>
        <label>GroupId</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Dashboard Language</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>en_US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <description>Holds the Dashboard Locale</description>
        <label>Locale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <description>Permission set name for the corresponding Dashboard</description>
        <label>Permission Set Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <description>Holds the Report Id for the Dashboards</description>
        <inlineHelpText>Dashboard Report ID</inlineHelpText>
        <label>ReportId</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <description>Holds the Report Name which is to be displayed in Portal</description>
        <label>Report Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of the user to access the dashboard</description>
        <label>Role</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Multi_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify Multi-site or Single Site Dash Board</description>
        <label>is Multi Site</label>
        <type>Checkbox</type>
    </fields>
    <label>Connect Dashboard</label>
    <pluralLabel>Connect Dashboards</pluralLabel>
</CustomObject>